--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html {
   font-family: serif;
   text-decoration: none;
   min-height: 100%;
+  color: white;
+  background-color: black;
 }
 
 *, *:before, *:after {
@@ -37,14 +39,21 @@ body {
     ". . site-title3 site-screen3"
     ". . site-title4 site-screen4"
     "footer footer footer footer";
+  grid-row-gap: 1rem;
   align-items: center;
   min-width: 0;
   min-height: 0;
 }
 
-.title {
+.page-title {
+  font-size: 3rem;
   grid-area: header;
   margin: auto;
+}
+
+.title {
+  text-align: right;
+  padding-right: 10px;
 }
 
 .title,
@@ -55,6 +64,12 @@ body {
   height: auto;
   overflow: hidden;
   }
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
 
 /*React project 1*/
 .react-1.title {
