--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ html {
   font-family: Arial, sans-serif;
   text-decoration: none;
   min-height: 100%;
-  color: white;
-  background-color: black;
+  color: #ebebeb;
+  background-color: #252525;
 }
 
 *, *:before, *:after {
@@ -100,18 +100,18 @@ img {
 
 .screenshot:hover .description{
   display: block;
-  background-color: black;
+  background-color: #252525;
   position: absolute;
   left: 3rem;
   top: -1rem;
-  border: 2px solid white;
+  border: 2px solid #ebebeb;
   z-index: 2;
   padding: 0.5rem;
   line-height: 1.3;
 }
 
 .description a {
-  color: yellow;
+  color: #e5c454;
   text-decoration: underline;
 }
 /*React project 1*/
