--- a/style.css
+++ b/style.css
@@ -31,17 +31,18 @@ body {
   min-height: 100vh; /*added*/
   /*max-height: 100vh;*/
   display: grid;
-  grid-template-columns: 15fr 35fr 15fr 35fr;
-  grid-template-rows: 10vh 10vh repeat(3, 33fr) 5vh;
+  grid-template-columns: 12fr 35fr 6fr 35fr 12fr;
+  grid-template-rows: 17vh 5vh repeat(3, 33fr) 5vh;
   grid-template-areas:
-    "header header header header"
-    ". react-col-head . site-col-head"
-    "react-title1 react-screen1 site-title1 site-screen1"
-    "react-title2 react-screen2 site-title2 site-screen2"
-    ". . site-title3 site-screen3"
+    "header header header header header"
+    ". react-col-head . site-col-head ."
+    "react-title1 react-screen1 . site-screen1 site-title1"
+    "react-title2 react-screen2 . site-screen2 site-title2 "
+    ". . . site-screen3 site-title3"
     /*". . site-title4 site-screen4"*/
-    "footer footer footer footer";
+    "footer footer footer footer footer";.
   grid-row-gap: 1rem;
+  /*grid-column-gap: 2rem;*/
   align-items: center;
   /*min-width: 0;
   min-height: 0;*/
@@ -60,7 +61,8 @@ body {
 }
 
 .col-head {
-  font-size: 2.25rem;
+  font-size: 2rem;
+  text-align: center;
 }
 
 .react.col-head {
@@ -74,6 +76,11 @@ body {
 .title {
   text-align: right;
   padding-right: 10px;
+}
+
+.site.title {
+  text-align: left;
+  padding-left: 10px;
 }
 
 .title,
@@ -101,14 +108,19 @@ img {
 
 .screenshot:hover .description{
   display: block;
+  width: 30rem;
   background-color: #252525;
   position: absolute;
-  left: 3rem;
+  right: 3rem;
   top: -1rem;
   border: 2px solid #ebebeb;
   z-index: 2;
   padding: 0.5rem;
   line-height: 1.3;
+}
+
+.screenshot:hover .site.description {
+  left: 3rem;
 }
 
 .description a {
