--- a/style.css
+++ b/style.css
@@ -26,26 +26,21 @@ body {
 }
 
 .container {
+  display: grid;
   margin: auto;
   max-width: 960px;
-  min-height: 100vh; /*added*/
-  /*max-height: 100vh;*/
-  display: grid;
-  grid-template-columns: 12fr 35fr 6fr 35fr 12fr;
-  grid-template-rows: 14vh 5vh repeat(3, 25fr) 6vh;
+  height: 100vh; /*added*/
+  grid-row-gap: 1rem;
+  grid-template-columns: auto auto 8% auto auto;
+  grid-template-rows: 14vh 5vh auto auto auto 6vh;
   grid-template-areas:
     "header header header header header"
     ". react-col-head . site-col-head ."
     "react-title1 react-screen1 . site-screen1 site-title1"
     "react-title2 react-screen2 . site-screen2 site-title2 "
     ". . . site-screen3 site-title3"
-    /*". . site-title4 site-screen4"*/
     "footer footer footer footer footer";.
-  grid-row-gap: 1rem;
-  /*grid-column-gap: 2rem;*/
   align-items: center;
-  /*min-width: 0;
-  min-height: 0;*/
 }
 
 .page-title {
@@ -53,6 +48,10 @@ body {
   grid-area: header;
   margin: auto;
   padding-top: 1.5rem;
+}
+
+.page-title.medium {
+  display: none;
 }
 
 .page-title,
@@ -87,9 +86,7 @@ body {
 .screenshot {
   max-width: 100%;
   min-width: 0;
-  max-height: 100%;
   height: auto;
-  /*overflow: hidden;*/
   }
 
 .screenshot {
@@ -174,4 +171,73 @@ footer {
   padding-top: 0.5rem;
   display: flex;
   justify-content: space-between;
+}
+
+/*Media queries*/
+@media only screen and (max-width: 990px) {
+  html,
+  body,
+  .container {
+    min-height: 100%;
+  }
+
+  .container {
+    max-width: 98%;
+    justify-content: center;
+    grid-template-columns: auto 5% auto;
+    grid-template-rows: auto auto auto 247.75px auto 247.75px auto 247.75px auto;
+    grid-template-areas:
+      "header header header"
+      "react-col-head . site-col-head"
+      "react-title1 . site-title1"
+      "react-screen1 . site-screen1"
+      "react-title2 . site-title2"
+      "react-screen2 . site-screen2"
+      ". . site-title3"
+      ". . site-screen3"
+      "footer footer footer";
+  }
+
+  .widest {
+    display: none;
+  }
+
+  .page-title.medium {
+    display: block;
+    font-size: 2.5rem;
+    text-align: center;
+    line-height: 1.2;
+  }
+
+  footer {
+    padding: 0.5rem;
+  }
+}
+
+@media only screen and (max-width:800px) {
+  .container {
+    max-width: 100%;
+    grid-template-columns: minmax(min-content, 33.8rem);
+    grid-template-rows: minmax(auto, 20rem);
+    grid-template-areas:
+      "header"
+      "react-col-head"
+      "react-title1"
+      "react-screen1"
+      "react-title2"
+      "react-screen2"
+      "site-col-head"
+      "site-title1"
+      "site-screen1"
+      "site-title2"
+      "site-screen2"
+      "site-title3"
+      "site-screen3"
+      "footer"
+  }
+
+  img {
+    width: 100%;
+    max-height: 20rem;
+  }
 }
