--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   margin: auto;
   padding: 0 2rem;
   height: 100vh;
-  grid-column-gap: 1.5rem;
+  grid-column-gap: 2rem;
   grid-template-columns: auto repeat(6,1fr);
   grid-template-rows: 15vh auto auto auto auto 6vh;
   grid-template-areas:
@@ -178,11 +178,27 @@ footer {
 /*iPad in landscape*/
 @media only screen and (max-width: 1024px) {
   .container {
-    grid-template-rows: 19vh 5vh auto auto auto 6vh;
+    grid-template-rows: 19vh 1vh 1fr 1vh 1fr 6vh;
   }
-  
+
+  .site.col-head,
+  .website-1,
+  .website-2,
+  .website-3 {
+    align-self: flex-start;
+  }
+
+  .site.col-head {
+    padding-top: 33%;
+  }
+
+  #zen {
+    /*max-height: 127.58px;*/
+    /*max-width: 219.13px;*/
+  }
+
   .screenshot:hover .description {
-    width: 22rem;
+    width: 11rem;
     left: 0;
     top: 1.5rem;
   }
@@ -202,18 +218,21 @@ footer {
   .container {
     max-width: 98%;
     justify-content: center;
-    grid-template-columns: auto 5% auto;
-    grid-template-rows: auto auto auto 247.75px auto 247.75px auto 247.75px auto;
+    grid-column-gap: 2.5rem;
+    grid-row-gap: 1rem;
+    grid-template-columns: 50% 50%;
+    /*grid-template-rows: auto auto auto 247.75px auto 247.75px auto 247.75px auto;*/
+    grid-template-rows: auto auto repeat(3, 1fr) auto;
     grid-template-areas:
-      "header header header"
-      "react-col-head . site-col-head"
-      "react-title1 . site-title1"
-      "react-screen1 . site-screen1"
-      "react-title2 . site-title2"
-      "react-screen2 . site-screen2"
-      ". . site-title3"
-      ". . site-screen3"
-      "footer footer footer";
+      "header header"
+      "react-col-head site-col-head"
+      /*". . ."*/
+      "react-screen1 site-screen1"
+      /*". . ."*/
+      "react-screen2 site-screen2"
+      /*". . ."*/
+      ". site-screen3"
+      "footer footer";
   }
 
   .widest {
@@ -231,12 +250,35 @@ footer {
     padding-top: 2rem;
   }
 
-  .title,
+  .screenshot,
+  img {
+    /*object-fit: cover;*/
+    /*width: 436.2px;*/
+    /*height: 251px*/
+  }
+
+  /*.react-1,
+  .react-2 {
+    height: 251px;
+  }*/
+
+  .site.col-head,
+  .website-1,
+  .website-2,
+  .website-3 {
+    align-self: center;
+  }
+
+  .site.col-head {
+    padding-top: 2rem;
+  }
+
+  /*.title,
   .site.title {
     text-align: center;
     padding-top: 1.75rem;
     font-size: 1.5rem;
-  }
+  }*/
 
 
   footer {
@@ -287,11 +329,26 @@ footer {
     width: 75%;
     left: 12.5%;
     top: 1.5rem;
-    font-size: 1.25rem;
+    /*font-size: 1.25rem;*/
+    font-size: 1rem;
   }
 
   .screenshot:hover .site.description {
     left: 12.5%;
+  }
+
+  footer {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  footer h3,
+  footer h4 {
+    width: 35%;
+  }
+
+  footer h4 {
+    text-align: right;
   }
 
 }
