--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   grid-template-rows: 15vh auto auto auto 6vh;
   grid-template-areas:
     "header header header header header header header"
-    " . . full-col-head full-screen1 full-screen1 . . "
+    " . full-col-head full-screen1 full-screen1 full-screen2 full-screen2 . "
     " . react-col-head react-screen1 react-screen1 react-screen2 react-screen2 ."
     "site-col-head site-screen1 site-screen1 site-screen2 site-screen2 site-screen3 site-screen3"
     "footer footer footer footer footer footer footer";
@@ -131,9 +131,11 @@ img {
   text-decoration: underline;
 }
 /*Full-stack projects*/
-
 .full-1.screenshot {
   grid-area: full-screen1;
+}
+.full-2.screenshot {
+  grid-area: full-screen2;
 }
 /*React projects*/
 
@@ -202,14 +204,14 @@ only screen and (max-width: 990px) {
   .container {
     width: 100vw;
     height: 100vh;
-    justify-content: center;
+    /* justify-content: center; */
     align-content: start;
     grid-template-rows: 20vh auto auto;
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas:
       "header header header header"
       ". full-col-head full-col-head ."
-      ". full-screen1 full-screen1 ."
+      "full-screen1 full-screen1 full-screen2 full-screen2"
       ". react-col-head react-col-head ."
       "react-screen1 react-screen1 react-screen2 react-screen2"
       ". site-col-head site-col-head ."
@@ -269,6 +271,7 @@ only screen and (max-width: 990px) {
       "header"
       "full-col-head"
       "full-screen1"
+      "full-screen2"
       "react-col-head"
       "react-screen1"
       "react-screen2"
